--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Prudhvi Weds Mounika" />
-	<meta property="og:image" content="./images/gallery-2.jpg" />
+	<meta property="og:image" content="./images/08.jpg" />
 	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="" />
-	<meta property="og:description" content="" />
+	<meta property="og:site_name" content="Prudhvi + Mounika" />
+	<meta property="og:description" content="Prudhvi Weds Mounika" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
