--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Prudhvi + Mounika</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Prudhvi Weds Mounika" />
+<!-- Primary Meta Tags -->
+<title>Prudhvi + Mounika</title>
+<meta name="title" content="Prudhvi + Mounika" />
+<meta name="description" content="Prudhvi Weds Mounika" />
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://prudhviacharya.github.io/prumou/" />
+<meta property="og:title" content="Prudhvi + Mounika" />
+<meta property="og:description" content="Prudhvi Weds Mounika" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Prudhvi Weds Mounika" />
-	<meta property="og:image" content="./images/08.jpg" />
-	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="Prudhvi + Mounika" />
-	<meta property="og:description" content="Prudhvi Weds Mounika" />
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://prudhviacharya.github.io/prumou/" />
+<meta property="twitter:title" content="Prudhvi + Mounika" />
+<meta property="twitter:description" content="Prudhvi Weds Mounika" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
 		type='text/css'>
