--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta property="og:url" content="https://prudhviacharya.github.io/prumou/" />
 <meta property="og:title" content="Prudhvi + Mounika" />
 <meta property="og:description" content="Prudhvi Weds Mounika" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
