--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 <meta property="og:url" content="https://prudhviacharya.github.io/prumou/" />
 <meta property="og:title" content="Prudhvi + Mounika" />
 <meta property="og:description" content="Prudhvi Weds Mounika" />
-<meta property="og:image" content="" />
+<meta property="og:image" content="https://prudhviacharya.github.io/prumou/images/08.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://prudhviacharya.github.io/prumou/" />
 <meta property="twitter:title" content="Prudhvi + Mounika" />
 <meta property="twitter:description" content="Prudhvi Weds Mounika" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://prudhviacharya.github.io/prumou/images/08.jpg" />
 
-<!-- Meta Tags Generated with https://metatags.io -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
 		type='text/css'>
